<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">E-Commerce</string>
    <string name="sales_icon">Sales</string>
    <string name="contact_text">контакты</string>
    <string name="about_text">Про нас</string>
    <string name="main_scene_text">Главное</string>
    <string name="logo_of_app_1">Courses</string>
    <string name="logo_of_app_2">App</string>
    <string name="course_start_date">Старт обучения:</string>
    <string name="course_level">Уровень:</string>
    <string name="course_desc">Программа обучения Джава – рассчитана на новичков в данной сфере. За программу вы изучите построение графических приложений под ПК, разработку веб сайтов на основе Java Spring Boot, изучите построение полноценных Андроид приложений и отлично изучите сам язык Джава!</string>
    <string name="bascet">Корзина</string>
    <string name="pay_purchases">Оплатить</string>
    <string name="result_buy">Итого:</string>

    <string name="store_name" translatable="false">Hobby for yourself</string>

    <!-- Payment notification -->
    <string name="channel_name">Платежный канал</string>
    <string name="send_notification">Отправить уведомление</string>
    <string name="notification_title" translatable="false">Пополнение счета</string>
    <string name="notification_text">Баланс вашего счета близок к нулю. Долейте его прямо сейчас.</string>
    <string name="pay_other_method">Пополнение счета другим способом</string>

    <!-- Checkout -->
    <string name="googlepay_status_unavailable">К сожалению, Google Play недоступен на этом устройстве.</string>
    <string name="payments_show_name">Успешно получены платежные данные для %s!</string>
    <string name="gateway_replace_name_example">"Gateway name set to \"example\" - please modify Constants.java and replace it with your own gateway."</string>
    <string name="checkout_item_description">Описание</string>

    <string name="numer">Контакты по номеру телефона:</string>
    <string name="number_1">+7(920)666-73-37</string>
    <string name="number_2">+7(999)544-18-18</string>
    <string name="mail">Почта:</string>
    <string name="mail_com">dandalion_two@mail.ru</string>
    <string name="about_us">Наше приложение предназначено для людей любого свободного возраста, для людей ищущих, интересующихся, многогранных, которые не боятся нового, готовых к переменам, умеющих учится и творить. Творчество — это главная идея нашего приложения. Нам хотелось бы сделать этот мир немного лучше. Дать возможность людям обучиться новому, удовлетворить сове любопытство, потому что хобби для любого человека, это солнечный лучик в его жизни. Курсы, которые предлагает наше приложение предоставляет разные стороны человеческого таланта, поэтому человек может выбрать курсы в совершенно разных направлениях и обращаться к нашему приложению многократно. Дерзайте! И окружающий вас мир будет радовать вас новыми красками!</string>

</resources>
